// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders correctly when className is set. 1`] = `
<div
  className="root home"
>
  <div
    className="center"
  >
    <h3
      className="title"
    >
      Hello 
      World
    </h3>
    <button
      onClick={[Function]}
    >
      Click: 0
    </button>
  </div>
</div>
`;

exports[`App renders correctly. 1`] = `
<div
  className="root"
>
  <div
    className="center"
  >
    <h3
      className="title"
    >
      Hello 
      World
    </h3>
    <button
      onClick={[Function]}
    >
      Click: 0
    </button>
  </div>
</div>
`;
